--- a/bandwidth_jitter_chart.ipynb
+++ b/bandwidth_jitter_chart.ipynb
@@ -38,7 +38,7 @@
     "fft_freq = np.linspace(0,1500/1.200,1501)\n",
     "filter=np.heaviside(bandwidth2-fft_freq, 0*fft_freq)\n",
     "\n",
-    "p2 = figure(plot_width=400, plot_height=400,y_axis_type=\"linear\", background_fill_color=\"lightgray\")\n",
+    "p2 = figure(width=400, height=400,y_axis_type=\"linear\", background_fill_color=\"lightgray\")\n",
     "p2.outline_line_width = 1; p2.outline_line_color = \"black\"; p2.min_border_top = 10\n",
     "lfft = p2.line(fft_freq,sig_fft_norm,line_color='#2222aa', legend_label = 'Frequency Components')\n",
     "p2.legend.background_fill_alpha = 0.5\n",
@@ -53,7 +53,7 @@
     "sig_fft_f = sig_fft*filter\n",
     "inv_sig_fft=np.fft.irfft(sig_fft_f)\n",
     "\n",
-    "p3 = figure(plot_width=400, plot_height=400, background_fill_color=\"lightgray\",\n",
+    "p3 = figure(width=400, height=400, background_fill_color=\"lightgray\",\n",
     "            title=\"Bandwidth Limited Signal\")\n",
     "p3.title.text_font_style='normal'; p3.title.text_font_size='12pt'\n",
     "p3.outline_line_width = 1; p3.outline_line_color = \"black\"\n",
@@ -135,7 +135,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
